<resources>
    <string name="app_name">larise</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="order_cancel">Batal</string>
    <string name="orderButton">Pesan</string>
    <string name="harga_total">Rp. 500.000</string>
    <string name="total_cart">Total : </string>
    <string name="namaLabel">Nama Lengkap</string>
    <string name="emailLabel">Email</string>
    <string name="phoneLabel">Nomor HP</string>
    <string name="EmailData">dimasadyaksa@gmail.com</string>
    <string name="phoneData">089615054118</string>
    <string name="username">Dimas Adiyaksa</string>
    <string name="order_biaya">Rp. 1000</string>
    <string name="order_confirm_button">Konfirmasi</string>
    <string name="order_id">Pesanan #A1KW2</string>
    <string name="menu_1">Full Body Treatment</string>
    <string name="menu_3">Hand &amp; Foot Treatment</string>
    <string name="menu_2">Face Treatment</string>
    <string name="menu_4">Hour Treatment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="HOME">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ORDER">Pesanan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_cart_view">cartView</string>
    <string name="title_activity_full_body">full_body</string>
    <string name="title_activity_facetreatment">Face Treatment</string>
    <string name="title_activity_hnf">Hand and Foot Treatment</string>
    <string name="title_activity_hourtreatment">Hour Treatment</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_map_kiri">Batal</string>
    <string name="btn_map_kanan">Checkout</string>
    <string name="checkout">CheckOut</string>
    <string name="add_to_chart">Add to Chart</string>
</resources>
