<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="100dp"
            android:textSize="16sp"
            android:fontFamily="@font/opensanssemibold"
            android:text="@string/order_id" />

        <TextView
            android:id="@+id/order_biaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="60dp"
            android:textSize="15sp"
            android:fontFamily="@font/opensanssemibold"
            android:text="@string/order_biaya" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="40dp"
            android:text="@string/order_confirm_button" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="12dp"
            app:srcCompat="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>
</LinearLayout>