<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="100dp"
            android:textSize="16sp"
            android:fontFamily="@font/opensanssemibold"
            android:text="@string/order_id" />

        <TextView
            android:id="@+id/Cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:fontFamily="@font/opensanssemibold"
            android:text="@string/order_biaya" />

        <Button
            android:id="@+id/Konfirm"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:layout_marginRight="10dp"
            android:text="@string/order_cancel" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="12dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/Status"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="100dp"
            android:textSize="15sp"
            android:fontFamily="@font/opensanssemibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>