<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pesanan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="500dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/opensanssemibold"
                android:layout_marginBottom="5dp"
                android:text="@string/total_cart"
                android:textColor="@color/Primary"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/totalCost"
                android:layout_width="wrap_content"
                android:fontFamily="@font/opensansbold"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/harga_total"
                android:textColor="@color/Primary"
                android:textSize="25sp" />
        </LinearLayout>

        <Button
            android:id="@+id/pesan"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="73dp"
            android:layout_gravity="bottom"
            android:textSize="25sp"
            android:fontFamily="@font/opensansbold"
            android:textColor="@color/Surface"
            android:background="@color/PrimaryDark"
            android:text="@string/orderButton" />
    </LinearLayout>

</FrameLayout>