<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/PrimaryDark"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <ImageView
            android:id="@+id/imageViewreg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat= "@drawable/ic_launcher_background" />

        <EditText
            android:id="@+id/nama"
            android:layout_below="@id/imageViewreg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:hint="@string/namaLabel"
            app:fontFamily="@font/opensansbold"
            android:background="@drawable/round_text"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            android:layout_below="@id/nama"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/prompt_email"
            app:fontFamily="@font/opensansbold"
            android:background="@drawable/round_text"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/noHP"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="Nomor Handphone"
            app:fontFamily="@font/opensansbold"
            android:background="@drawable/round_text"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <EditText
            android:id="@+id/password"
            android:layout_below="@id/noHP"
            app:fontFamily="@font/opensansbold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_text"
            android:hint="@string/prompt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:background="@color/Primary"
            android:backgroundTint="@color/Primary"
            android:textSize="15sp"
            android:textColor="@color/Background"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="REGISTER" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@id/register"
            android:layout_marginTop="21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lpPassword"
                android:layout_marginRight="30dp"
                android:textSize="18sp"
                android:textColor="@color/Background"
                android:fontFamily="@font/opensansbold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="Lupa Password?" />

            <TextView
                android:layout_marginRight="30dp"
                android:id="@+id/login_in_reg"
                android:textSize="18sp"
                android:textColor="@color/Background"
                android:fontFamily="@font/opensansbold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text="Login" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>